--- a/client/android/app/src/main/res/layout/activity_main.xml
+++ b/client/android/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.lovelocator.lovelocator.MainActivity"
+    tools:context="com.secretproject.secretproject.MainActivity"
     android:background="@color/colorAccent">
+
 
     <ImageButton
         app:srcCompat="@drawable/heart"
