--- a/client/android/app/src/main/res/values/colors.xml
+++ b/client/android/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ffd1e1</color>
+    <color name="colorAccent">#feaec9</color>
 </resources>
