--- a/client/android/app/src/main/res/xml/settings.xml
+++ b/client/android/app/src/main/res/xml/settings.xml
@@ -27,7 +27,7 @@
             android:selectAllOnFocus="true"
             android:singleLine="true"
             android:title="@string/nickname"
-            android:key="server_nickbame" />
+            android:key="server_nickname" />
         <EditTextPreference
             android:defaultValue="testUser"
             android:selectAllOnFocus="true"
